# is_elevated

./: Cargo.toml  LICENSE  README.md  appveyor.yml
src/: lib.rs
