[package]
name = "is_elevated"
version = "0.1.0"
authors = ["Vsevolod Zubarev <yandexx@gmail.com>"]
description = "Determine whether your Windows process is running elevated or not."
keywords = ["Windows", "Windows API", "elevation", "UAC"]

[dependencies]
winapi = { version = "0.3.6", features = ["securitybaseapi", "processthreadsapi"] }
