[package]
name = "is_elevated"
version = "0.1.2" # remember to update html_root_url
authors = ["Vsevolod Zubarev <yandexx@gmail.com>"]
description = "Determine whether your Windows process is running elevated or not."
keywords = ["windows", "windowsapi", "windowssdk", "elevation", "uac"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yandexx/is_elevated"

[dependencies]
winapi = { version = "0.3.6", features = ["securitybaseapi", "processthreadsapi"] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
